--- a/LaTeX/LaTeX Thesis Template/pages/references.bib
+++ b/LaTeX/LaTeX Thesis Template/pages/references.bib
@@ -1,59 +1,6 @@
-@article{einstein,
-  author       = {Albert Einstein},
-  title        = {Zur Elektrodynamik bewegter K{\"o}rper. (German) [On the electrodynamics of moving bodies]},
-  journaltitle = {Annalen der Physik},
-  year         = {1905},
-  volume       = {322},
-  number       = {10},
-  pages        = {891-921},
-  doi          = {http://dx.doi.org/10.1002/andp.19053221004}
-}
-
-@online{knuthwebsite,
-  author = {Donald Knuth},
-  title  = {Knuth: Computers and Typesetting},
-  year   = {1984},
-  url    = {http://www-cs-faculty.stanford.edu/~uno/abcde.html}
-}
-
-@online{wikipedia-abstract,
-  author = {Tom Reding},
-  title  = {Abstract (summary)},
-  year   = {2021},
-  url    = {https://en.wikipedia.org/w/index.php?title=Abstract_(summary)}
-}
-
-@book{latexcompanion,
-  author    = {Michel Goossens and Frank Mittelbach and Alexander Samarin},
-  title     = {The \LaTeX\ Companion},
-  year      = {1993},
-  publisher = {Addison-Wesley},
-  location  = {Reading, Massachusetts}
-}
-
-@online{guidelines-for-writing-your-thesis-report,
-  author = {Rasmus Pedersen},
-  title  = {Guidelines for writing your thesis report},
-  year   = {2021},
-  url    = {https://studerende.au.dk/en/studies/subject-portals/agroecology-food-and-environment/bachelors-project-masters-thesis-and-other-projects/masters-thesis/thesis-projects-at-agricultural-and-food-science/guidelines-for-writing-your-thesis-report/}
-}
-@online{get-thesis-how-to-write-a-winning-bachelor-thesis,
-  author = {Unknown},
-  title  = {How to Write a Winning Bachelor Thesis},
-  year   = {2021},
-  url    = {https://get-thesis.com/blog/bachelor-thesis}
-}
-
-@online{oxford-thesis,
-  author = {John McManigle},
-  title = {Oxford Thesis Template},
-  year = {2015},
-  url = {https://www.oxfordechoes.com/oxford-thesis-template/}
-}
-
-@online{dsc-text-similarity,
-  author = {Thomas Ebsen},
-  title = {Mini-Project-Text-Similarity},
-  year = {2021},
-  url = {https://github.com/SOFT2021-Data-Science/Mini-Project-Text-Similarity}
+@online{how-to-improve-javas-io-performance,
+  author = {Nick Zhang},
+  title  = {Java Tip 26: How to improve Java's I/O performance},
+  year   = {1997},
+  url    = {https://www.infoworld.com/article/2077523/java-tip-26--how-to-improve-java-s-i-o-performance.html}
 }
