--- a/LaTeX/LaTeX Thesis Template/pages/titlepage.tex
+++ b/LaTeX/LaTeX Thesis Template/pages/titlepage.tex
@@ -4,9 +4,9 @@
         \linespread{1.5}
 
         \Huge
-        \textbf{Suitably impressive thesis title}\\
+        \textbf{Exploration and Presentation}\\
         \Large
-        \emph{Suitable subtitle}
+        \emph{Assignment 3 - Optimization}
 
         
         \vfill
@@ -16,13 +16,10 @@
         \vfill
 
         \textbf{Thomas Stevns Nielsen Ebsen}\\
-        Copenhagen Business Academy
+        \textbf{Jonas Valentin Björk Hein}\\
+        \textbf{Jonatan Magnus Bakkke}
 
         \vspace{1.5cm}
-
-        A thesis presented for the degree of\\
-        \emph{Bachelor of Software Development}
-
         Denmark, \today
 
         \linespread{1}
