--- a/LaTeX/LaTeX Thesis Template/main.tex
+++ b/LaTeX/LaTeX Thesis Template/main.tex
@@ -20,11 +20,9 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[RO,LE]{Thesis Title}
+\fancyhead[RO,LE]{Assignment 3 - Optimization}
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,RE]{Chapter \thechapter}
-\fancyfoot[CO,RE]{Thomas Stevns Nielsen Ebsen}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
@@ -36,49 +34,23 @@
 \usepackage{listings}
 \usepackage[colorinlistoftodos]{todonotes}
 
-\title{
-    {asdasd thesis title}\\
-    {\large Subtitle}\\
-    {\includegraphics{cphbusiness-small.png}}
-}
-\author{Thomas Stevns Nielsen Ebsen}
-\date{\today}
 
 \begin{document}
 
 \input{pages/titlepage}
 
-\input{pages/abstract.tex}
-
-\chapter*{Acknowledgement}
-\input{pages/acknowledgement.tex}
-
 \tableofcontents
-\listoffigures
-\listoftables
 
-\chapter{Introduction}
+\chapter{Hand-in}
 \input{pages/chapters/introduction}
+\pagebreak
+\input{pages/chapters/documentation.tex}
+\pagebreak
+\input{pages/chapters/bottlenecks.tex}
+\pagebreak
+\input{pages/chapters/optimization.tex}
 
-\chapter{Assignment Tasks}
-\input{pages/chapters/task01.tex}
-\input{pages/chapters/task02.tex}
-
-\chapter{Clearing requirements for \ref{second-task}}
-\input{pages/chapters/danishletters.tex}
-\input{pages/chapters/graphics.tex}
-\input{pages/chapters/referencing.tex}
-
-
-\chapter{Conclusion}
-\input{pages/chapters/conclusion.tex}
-
-\appendix
-\chapter{Appendix Title}
-\input{pages/chapters/appendix.tex}
 
 \printbibliography
-
-\listoftodos
 
 \end{document}
